5-Services/lb-test.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-lb
  name: test-lb
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-lb
  type: LoadBalancer
status:
  loadBalancer: {}
